0.19    
        Extra checks that script_url ends in a '/'
        Fixed small bug with edit conflict form - map link field was missing.

0.18    16 June 2003
        Added a Makefile.PL as well as a Build.PL, for CPAN.pm users.

0.17    15 June 2003
        Fixed OpenGuides::Utils to take note of dbhost.
        Added example stylesheet provided by the OxfordGuide team.

0.16    26 May 2003
        Ivor fixed OpenGuides::Diff to diff by word instead of by character.

        Fixed edit conflict up so it works nicely when you click the
        Save button as well as the Preview one.

        Added preferences option of displaying lat/long as deg-min-sec
        instead of decimal (requested by James).

0.15    18 May 2003
        Added Algorithm::Diff version dependency to prereqs, fixed bug
        with preferences.cgi and blank script_name, fixed REDIRECT bug.

0.14    17 May 2003
        Added "Wanted Pages" link to navbar, thanks to Simon Cozens for
        the idea.

        Fixed many bugs noticed by Dominic Hargreaves and other Oxonians.
        Many thanks to Dominic for making an Oxford OpenGuides install for
        us to find bugs in.

0.13    17 May 2003
        Added some more stylesheet hooks.
        Tweaked OpenGuides::Diff to make it testable, added a start at tests.
        Lat and long now stored to only 6dp instead of millions.
        Added edit field for map link.

0.12    14 May 2003
        Added OpenGuides::CGI to manage cookies and things, used this to
        do more code tidying.  Added edit box position option to preferences.

0.11    14 May 2003
        Added newpage.cgi for an easy way to create new pages.

        Took loads of repeated code (for extracting and packaging metadata
        variables) out of wiki.cgi into OpenGuides::Template.

0.10    11 May 2003
        Added OpenGuides::Diff to provide nice diff output between
        node versions.

        Added OpenGuides::Template to handle Template Toolkit stuff in a